<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Planitorium</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="plants">Plants</string>
    <string name="disease_detection">Detection</string>
    <string name="add">add</string>
    <string name="profile">Profile</string>

    <!-- Welcome Page -->
    <string name="welcome_text">Welcome to Planitorium</string>

    <!-- Authentication -->
    <string name="email">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signin_text">Don\'t have an account ?</string>
    <string name="signup_text">Already have an account ?</string>

    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="username_empty">Username tidak boleh kosong</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="signin_success">Sign In Success</string>

    <string name="signup_success">Berhasil!</string>
    <string name="signup_message">Akun kamu sudah jadi nih. Yuk, login dan mulai menanam!</string>
    <string name="signup_next">Lanjut</string>

    <!-- Profile -->
    <string name="profile_picture">Profile Picture</string>
    <string name="signout">Sign Out</string>

    <!-- Plants -->
    <string name="plant_name">Plant Name</string>
    <string name="notes">Notes:</string>
    <string name="date">Date</string>
    <string name="result">Bercak Daun Abu-abu</string>
    <string name="confidence">Confidence: %s%%</string>
    <string name="add_image">Add Image</string>
    <string name="plant_image">Plant Image</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="harvest_date">Harvest Date</string>
    <string name="planted_date">Planted Date</string>
    <string name="Notes" tools:ignore="TypographyEllipsis">Type Notes Here...</string>

    <!-- Disease Detection -->
    <string name="disease_detection_title">Disease Detection</string>
    <string name="analyze">Analyze</string>
    <string name="detection_result">Result Name</string>
    <string name="detection_confidence">Confidence: %s%%</string>
    <string name="detection_created_at">2024–12–10</string>
    <string name="detection_image">Detection Image</string>
    <string name="detection_suggestion">Suggestion:</string>

    <!-- Other -->
    <string name="default_image">images</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="no_crops">No Crops to harvest at the selected date</string>
</resources>